# meshsimplify

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simplify.h
data/: example.ply
